# VideoGen-Head-wise-Quant

./: .gitignore  DECISIONS.md  HANDOFF.md  MEMORY.md  README.md  STATUS.md  TASK_TEMPLATE.md
HeadWiseKVQuant/: NOTICE  README.md  pyproject.toml
HeadWiseKVQuant/assets/: t2v.txt
HeadWiseKVQuant/assets/head_importance/: top4_dmd_loss.json
HeadWiseKVQuant/backends/self_forcing/: analyze_head_importance.py  inference.py  run_dmd_scoring.py  run_inference_ablation.py
HeadWiseKVQuant/backends/self_forcing/configs/: self_forcing_dmd.yaml
HeadWiseKVQuant/docs/: checkpoint_sync.md  head_importance_topk.md  quantization_approaches.md  self_forcing_integration.md  workspace_structure.md
HeadWiseKVQuant/results/selfforcing/: vbench_prompts.txt
HeadWiseKVQuant/scripts/: aggregate_head_importance.py
HeadWiseKVQuant/scripts/eval/: aggregate_results.py  evaluate_experiments.sh
HeadWiseKVQuant/scripts/self_forcing/: run_bf16.sh  run_head_importance_analysis.sh  run_int2_all.sh  run_packed_naive_hwq.sh  run_packed_naive_topk_hwq.sh  run_random_hwq.sh
HeadWiseKVQuant/slurm_logs/: qvg_sf_bf16_g-24046.err  qvg_sf_bf16_g-24046.out  qvg_sf_int2_g-24090.err  qvg_sf_int2_g-24090.out  qvg_sf_int2_g-24114.err  qvg_sf_int2_g-24114.out  qvg_sf_int2_g-24309.err  qvg_sf_int2_g-24309.out
HeadWiseKVQuant/src/hwq/: __init__.py  compress.py  functions.py  head_importance.py  headwise.py  kv_cache.py  logger.py  misc.py  packed_naive.py  self_forcing.py  uncompress.py
HeadWiseKVQuant/tests/: test_head_importance.py  test_headwise.py
HeadWiseKVQuant/weekly_reports/: 2026-W20.md  README.md
Quant-VideoGen/: .gitignore  README.md  Untitled  pyproject.toml
Quant-VideoGen/docs/: headwise_quant_feasibility.md  random_headwise_quant_plan.md  self_forcing_qvg_walkthrough.md
Quant-VideoGen/experiments/LongCat/: prompt_loader.py  run_long_t2v.py
Quant-VideoGen/experiments/Self-Forcing/: inference.py
Quant-VideoGen/quant_videogen/: __init__.py  compress.py  functions.py  timer.py  uncompress.py
Quant-VideoGen/quant_videogen/kmeans/: centroid_update.py  kmeans_euclid.py
Quant-VideoGen/quant_videogen/real/: accumulate.py  prq.py
Quant-VideoGen/scripts/HY-WorldPlay/: download_models.sh  run_bf16.sh  run_qvg.sh
Quant-VideoGen/scripts/LongCat/: base.sh  run_bf16.sh  run_qvg.sh
Quant-VideoGen/scripts/Self-Forcing/: download_models.sh  run_bf16.sh  run_bf16_slurm.sh  run_qvg.sh  run_random_hwq.sh
(+265 files in other folders)
