[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headwise-kv-quant"
version = "0.1.0"
description = "Modular low-bit KV-cache quantization and head-wise mixed precision for video generation"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.1",
    "triton>=2.2",
    "numpy>=1.24",
    "termcolor>=2.3",
    "loguru>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hwq*"]
